<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sentinel_bringup</name>
  <version>0.0.0</version>
  <description>Top-level launch and configuration scaffolding for Nexus Sentinel.</description>
  <maintainer email="yxzhanggg@gmail.com">yxzhanggg</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>sentinel_description</depend>
  <depend>sentinel_gazebo</depend>
  <depend>sentinel_control</depend>
  <depend>sentinel_teleop</depend>
  <depend>sentinel_mission</depend>
  <depend>sentinel_perception</depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>twist_mux</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
